@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.23.
-.TH GRUB-INSTALL "8" "August 2001" "grub-install (GNU GRUB 0.90)" FSF
+.TH GRUB-INSTALL "8" "October 2001" "grub-install (GNU GRUB 0.90)" FSF
 .SH NAME
 grub-install \- install GRUB on your drive
 .SH SYNOPSIS
