@@ -1,3 +1,12 @@
+2001-10-13  Yoshinori K. Okuji  <okuji@gnu.org>
+
+	From Jason Thomas <jason@topic.com.au>:
+	* util/grub-install.in (convert): Add support for DAC960.
+
+	From Adrian Phillips <a.phillips@dnmi.no>:
+	* lib/device.c (get_dac960_disk_name): New function.
+	(init_device_map) [__linux__]: Add support for DAC960.
+	
 2001-10-11  Jochen Hoenicke  <jochen@gnu.org>
 
 	* stage2/fsys_reiserfs.c (reiserfs_super_block): Updated
